[package]
name = "publicip"
version = "0.1.0"
authors = ["Prabir Shrestha <mail@prabir.me>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/prabirshrestha/publicip.rs"
description = "Get the public ipv4 or ipv6 address"

[[bin]]
doc = false
name = "publicip"
path = "src/bin/publicip.rs"
required-features = ["exe"]

[features]
default = ["exe"]
exe = []

[dependencies]
async-std = { version ="1.7.0", features = ["attributes"] }
surf = "2.1.0"
